# Hack

./: .cirrus.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_LOG.md  SHA256SUMS  config.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-ci.yml
dev/: build-hardened.sh  build-sanitizers.sh  const_check.sh  fuzz-runner.py  game_runner.py  gauntlet.sh  gauntlet_v2.sh  gauntlet_v3.py  improved-fuzzer.py  pyproject.toml  repro.sh  run-all.py  run-asan-ubsan.py  run-asan.py  run-fuzz-enhanced.py  run-fuzz.py  run-ubsan.py  shrink_input.sh  simple_test.py  standalone-fuzzer.py  stress.sh  summarize_logs.sh  valgrind.supp  verify_const.sh
dev/lib/: __init__.py  build_lanes.py  colors.py  game_runner.py  test_runner.py
docs/: BUILD.md  CHANGELOG.md  CODING_STANDARDS.md  C_LEARNING_LOG.md  HISTORY_OF_HACK.md  TODO.md
docs/historical/: CODING_STANDARDS.md  C_LEARNING_LOG.md  hack_stubs.c  hack_stubs_src.c
docs/historical/original-source/: download_hack.sh
hackdir/: news
src/: alloc.c  compat.h  config.h  date.h  def.edog.h  def.eshk.h  def.flag.h  def.func_tab.h  def.gen.h  def.gold.h  def.mkroom.h  def.monst.h  def.obj.h  def.objclass.h  def.objects.h  def.permonst.h  def.rm.h  def.trap.h  def.wseg.h  hack.Decl.c  hack.apply.c  hack.bones.c  hack.c  hack.cmd.c  hack.do.c  hack.do_name.c  hack.do_wear.c  hack.dog.c  hack.eat.c  hack.end.c  hack.engrave.c  hack.fight.c  hack.h  hack.invent.c  hack.ioctl.c  hack.lev.c  hack.lock.c  hack.main.c  hack.makemon.c  hack.mfndpos.h  (+40 more)
